Added Ausblick and mechanism of tests

--- a/abk.tex
+++ b/abk.tex
@@ -12,5 +12,7 @@
 \acro{DSL}{Domain-specific language}
 \acro{GPU}{Graphics processing unit}
 \acro{JVM}{Java virtual machine}
+\acro{POM}{Project Object Model}
+\acro{PrePro}{Pre-Processing: PrePro ist die Bezechnung der DSL, die aus dieser Arbeit heraus entstanden ist}
 
 \end{acronym}
