--- a/bericht.bib
+++ b/bericht.bib
@@ -46,3 +46,11 @@
 	url = {https://dzone.com/articles/how-reuse-netbeans-debugger},
 	urldate = {2019-03-13}
 }
+
+@online{simpleLanguage,
+	author = {Graal Team},
+	title = {A simple example language built using the Truffle API},
+	year = 2019,
+	url = {https://github.com/graalvm/simplelanguage},
+	urldate = {2019-05-16}
+}
