--- a/bericht.tex
+++ b/bericht.tex
@@ -111,6 +111,7 @@ Die Unterstürzung eines Debuggers könnte in Zukunft noch umgesetzt werden.
 \input{kapitel/kapitel4}
 \input{kapitel/kapitel5}
 \input{kapitel/kapitel6}
+\input{kapitel/kapitel7}
 
 %\glsaddall
 %\printglossary[title=Glossar,toctitle=Glossar]
