--- a/kapitel/kapitel4.tex
+++ b/kapitel/kapitel4.tex
@@ -34,7 +34,7 @@ Es gibt mehrere Gründe, warum die Definition einer Main-Funktion unnötig ist:
 \item Es soll nur ein einziger arithmetischer Ausdruck ausgewertet werden.
 \item Kompatibilität mit bisher bestehenden anderen Tools, die keine Funktionen bieten, sondern nur eine Liste von Anweisungen entgegennehmen.
 \end{itemize}
-Deshalb wird die Main-Funktion in PrePro als optional gesehen und muss nicht deklariert werden.
+Deshalb wird die Main-Funktion in \ac{PrePro} als optional gesehen und muss nicht deklariert werden.
 Es reicht aus die Befehle untereinander zu schreiben.\\
 Trotzdem wird es als guter Stil erachtet, eine Main-Funktion zu deklarieren.
 
