--- a/kapitel/kapitel6.tex
+++ b/kapitel/kapitel6.tex
@@ -158,6 +158,7 @@ Dafür wird jederzeit die aktuelle Zeile angezeigt.
 	\label{fig:Commands_CLI_Debugger}
 \end{figure}
 
+\label{sec:Debugging_graphical}
 \subsection{Debugging im grafischen Editor}
 In dem Editor wird die aktuelle Zeile hervorgehoben und zusätzlich weitere Informationen zum Programmablauf angezeigt.
 Der Nutzer kann so viel bequemer debuggen.
