Improved motivation Groovy

--- a/kapitel/kapitel3.tex
+++ b/kapitel/kapitel3.tex
@@ -22,9 +22,10 @@ Wegen der Vorteile (vornehmlich das Debugging) von Interpretern im Vergleich zu 
 	\label{tab:Vorteile_Compiler_Interpreter}
 \end{table}
 
+\label{sec:usedTechnologies}
 \section{Verwendete Technologien}
 Die \ac{DSL} wird mittels einem Interpreter ausgeführt.
-Dieser baut auf folgenden Technologien auf:
+Dieser ist in Java (genauer: Groovy) geschrieben und baut auf folgenden Technologien auf:
 \begin{description}
 	\item{\textbf{ND4J}}\newline Matrizen-Berechnungen werden mittels dem ND4J-Framework durchgeführt.
 	\item{\textbf{Java}}\newline Das ND4J-Framework ist in der Programmiersprache Java verfügbar. Damit der Interpreter es verwenden kann, wird in dieser Sprache geschrieben.
