--- a/kapitel/kapitel7.tex
+++ b/kapitel/kapitel7.tex
@@ -48,7 +48,7 @@ Alle benötigten Abhängigkeiten werden von Maven standardmäßig aus dem Maven 
 Es ist eine große Sammlung von Artefakten, welche bequem per Maven-\ac{POM} heruntergeladen und eingebunden werden können.
 Ein Hochladen in das Maven Central ermöglicht es, dass Nutzer ganz einfach PrePro in ihren Projekten verwenden können.
 
-\subsection{NetBeans-Plugin in öffentliche Plguin-Sammlung laden}
+\subsection{NetBeans-Plugin in öffentliche Plugin-Sammlung laden}
 NetBeans bietet online eine Sammlung von Plugins, welche seht bequem in der NetBeans IDE heruntergeladen und installiert werden können.
 Somit entfällt das aufwendige Verteilen einer Datei und das Importieren dieser in NetBeans.
 
