Implemented notes from Mr. Rettig

--- a/bericht.tex
+++ b/bericht.tex
@@ -82,12 +82,11 @@
 
 \begin{abstract}
 In der Robotik werden oft Zeitreihen gemessen.
-Die können z.B. die Koordination von Markern auf einem Robotergreifarm sein.
-De gemessenen Daten werden oft für maschinelles Lernen aufbereitet, beispielsweise um Anomalien zu erkennen.
-Bisher erfolgte dies auf verschiedenen Wegen.\\
+Diese können z.B. die Koordination von Markern auf einem Robotergreifarm sein.
+Die gemessenen Daten werden immer öfter mittels maschinellem Lernen verarbeitet, beispielsweise um Anomalien zu erkennen.
+Hierfür werden sie vor der Verwendung aufbereitet.\\
 In dieser Arbeit wird eine \ac{DSL} entwickelt und implementiert, die speziell auf Zeitreihen zugeschnitten ist und eine einfache Syntax bereit stellt.\\
-Für die einfachere Verwendung der neuen Sprache PrePro wird zusätzlich ein Plugin mit Syntaxhervorhebung für die NetBeans IDE implementiert.
-Die Unterstürzung eines Debuggers könnte in Zukunft noch umgesetzt werden.
+Für die angenehmere Verwendung der neuen Sprache PrePro wurde zusätzlich ein Plugin mit Syntaxhervorhebung für die NetBeans IDE implementiert.
 \end{abstract}
 
 \newpage
