--- a/kapitel/kapitel1.tex
+++ b/kapitel/kapitel1.tex
@@ -2,13 +2,13 @@
 \chapter{Motivation}
 \setcounter{page}{1}
 \pagenumbering{arabic}
-Immer öfter werden Probleme der realen Welt mittels neuronaler Netze gelöst.
-Allerdings kann man in den meisten Fällen nicht einfach das neuronale Netz auf die gemessenen Daten angewendet werden.
-Die Daten müssen vorher aufbereitet werden und gegebenenfalls unwichtige Daten entfernt werden.
-Dies geschieht mittels verschiedener Frameworks in verschiedenen Sprachen.
+Immer öfter werden Probleme mittels künstlicher neuronaler Netze gelöst.
+Die Daten für das Netz müssen vorher aufbereitet werden.
+Dies kann das Normalisierung der Daten und das Entfernen von Rauschen beinhalten.
+Diese Maßnahmen können mittels verschiedener Frameworks in verschiedenen Sprachen umgesetzt werden.
 Es soll eine \ac{DSL} entwickelt werden, die genau auf diesen Anwendungsfall zugeschnitten ist.
-Durch die \ac{DSL} soll einen einheitliche Sprache geschaffen werden, welche das Vorprozessieren der Daten vereinfacht.
-Die Sprache soll plattformübergreifend sein und \ac{CPU}- und \ac{GPU}-Berechnungen ermöglichen.
+Durch die \ac{DSL} soll eine Sprache geschaffen werden, welche das Vorprozessieren der Daten vereinfacht.
+Die Sprache soll plattformübergreifend lauffähig sein und \ac{CPU}- und \ac{GPU}-Berechnungen ermöglichen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \endinput
