--- a/kapitel/kapitel2.tex
+++ b/kapitel/kapitel2.tex
@@ -27,7 +27,7 @@ Die gängigsten Frameworks sind in \tab{tab:Frameworks} gelistet.
 \section{ND4J}
 ND4J ist eine Framework für die Sprache Java, in welchem effiziente Matrizenoperationen durchgeführt werden können.
 Es kann auf der \ac{CPU} oder \ac{GPU} ausgeführt werden.
-In ND4J ist größtenteils nur das Konstrukt einer Matrix bekannt, Vektoren oder Skalare sind nur ein Spezialfall einer Matrix.
+In ND4J ist größtenteils nur das Konstrukt einer Matrix bekannt, Vektoren oder Skalare werden nur als Spezialfall einer Matrix betrachtet.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \endinput
