--- a/kapitel/kapitel3.tex
+++ b/kapitel/kapitel3.tex
@@ -1,10 +1,10 @@
 \chapter{Aufgabenstellung}
 \section{Zu Grunde liegendes Framework}
-In dem Umfeld der Arbeit hat sich das Framework ND4J in der Programmiersprache Java für den Praxiseinsatz durchgesetzt.
+Im RaHM-Lab hat sich der Einsatz von dem Framework ND4J in der Programmiersprache Java für den Praxiseinsatz bewährt.
 Daher soll die in dieser Arbeit entwickelte \ac{DSL} auf diesem Framework aufbauen.
 
 \section{Compiler und Interpreter}
-Die \ac{DSL} ist für das Vorprozessieren von Daten für maschinelles Lernen.
+Die zu entwickelnde DSL soll dem Vorprozessieren von Daten für die Anwendung von maschinellen Lern-Methoden dienen.
 Für die \ac{DSL} kommt ein Compiler oder Interpreter in Frage.
 Ein Transpiler ist nicht möglich, da es keine in der Praxis verwendete Sprache für das Vorprozessieren der Daten gibt, in die übersetzt werden kann.
 In der \tab{tab:Vorteile_Compiler_Interpreter} werden die Implementierungsmöglichkeiten mittels Compiler und Interpreter gegenüber gestellt.\\
