--- a/kapitel/kapitel4.tex
+++ b/kapitel/kapitel4.tex
@@ -22,7 +22,7 @@ Eine Funktion bezeichnet man als überladen, wenn es mehrere Funktionen mit glei
 In der DSL ist ein Überladen von Funktionen nicht vorgesehen, könnte aber nachträglich noch implementiert werden.\\
 Ein Beispiel von verschiedenen Funktionen befindet sich in \code{lst:Bsp_Funktionen}.\\
 
-\subsection{Main-Funktion}
+\subsection{Main-Funktion in der \acs{DSL}}
 Jedes prozedurale Programm benötigt einen Einstiegspunkt, wo das Programm gestartet wird.
 Da die DSL ein Framework verwendet, welches in Java geschrieben ist, ist es nicht unwahrscheinlich, dass die zukünftigen Nutzer vorher in Java programmiert haben.
 Daher wurde als Einstiegspunkt des Programms - wie in Java - eine Main-Funktion gewählt.
@@ -32,10 +32,10 @@ Um Daten in sein Programm zu laden wurde der Ansatz eines DataSets gewählt, meh
 \subsection{Weglassen der Main-Funktion}
 Es gibt mehrere Gründe, warum die Definition einer Main-Funktion unnötig ist:
 \begin{itemize}
-\item Es soll nur ein einziger arithmetischer Ausdruck ausgewertet werden.
+\item Es gibt Anwendungsfälle in denen ein verkürzte Syntax wünschenswert ist, und auf die Main-Funktion verzichtet werden kann.
 \item Kompatibilität mit bisher bestehenden anderen Tools, die keine Funktionen bieten, sondern nur eine Liste von Anweisungen entgegennehmen.
 \end{itemize}
-Deshalb wird die Main-Funktion in \acs{PrePro} als optional gesehen und muss nicht deklariert werden.
+Deshalb wurde die Main-Funktion in \acs{PrePro} optional implementiert und muss nicht deklariert werden.
 Es reicht aus die Befehle untereinander zu schreiben.\\
 Trotzdem wird es als guter Stil erachtet, eine Main-Funktion zu deklarieren.
 
@@ -69,9 +69,9 @@ function printResults(vec3 x, vec3 y, vec3 z) {
 Die \ac{DSL} ist für den Einsatz auf Zeitreihenberechnungen ausgelegt.
 Daher stellt in der \ac{DSL} jede Variable eine Zeitreihe dar.
 Die Operationen der \ac{DSL} sind immer auf Zeitreihen definiert.\\
-Beispielhaft wird der Ausdruck \texttt{x = a - b;} angenommen.
-In diesem Fall sind \texttt{a} und \texttt{b} gemessene Zeitreihen von Sensordaten.
-Die entstehende Variable \texttt{x} ist wiederum eine Zeitreihe, welche durch elementweise Subtraktion jedes Zeitelements entstanden ist.\\
+Beispielsweise der Ausdruck \texttt{x = a - b;}:
+In diesem Fall sind \texttt{a} und \texttt{b} Zeitreihen von Sensordaten.
+Die Variable \texttt{x} repräsentiert eine neue Zeitreihe, die durch elementweise Subtraktion jedes Zeitelements entstanden ist.\\
 Der Vorteil liegt darin, dass der simple Ausdruck \texttt{x = a - b;} sehr leicht les- und wartbar ist.
 Wenn jede Variable keine Zeitreihe, sondern ein einzelner Messpunkt wäre, müsste man eine Schleife verwenden oder sich eigene Methoden definieren bzw. (falls in der Sprache möglich) die Operatoren überschreiben.\\
 Variablen haben in der \ac{DSL} immer einen Typ.
@@ -95,26 +95,26 @@ vec3 z = y X x;
 
 \section{DataSet}
 Ein DataSet ist in der \ac{DSL} eine Sammlung von Variablen.
-In das DataSet können beliebig viele Variablen unter ihrem Namen gespeichert werden.
-Es ist nicht möglich zwei Variablen mit dem gleichen Namen abzulegen.
-Eine Variable kann bequem aus dem DataSet ausgelesen werden.
+In das DataSet können beliebig viele Zeitreihen und Konstanten unter einem Namen gespeichert werden.
+Es ist nicht möglich zwei Elemente mit dem gleichen Namen abzulegen.
+Eine Variable kann mittels der Funktion \texttt{INDArray getVariable(String variableName)} aus dem DataSet ausgelesen werden.
 
 \section{Import \& Export}
 \label{sec:Import}
 
-Ein Programm, das nur Berechnungen anstellt erscheint auf den ersten Blick sinnlos.
+Ein Programm, das nur Berechnungen anstellt, ohne ein Ergebnis zu liefern, erscheint auf den ersten Blick unnötig.
 Es muss die Möglichkeit haben, Daten zu lesen und zu schreiben.
 Im Falle der DSL wird ein eigenes DataSet definiert.
-Das Programm erhält bei der Ausführung ein DataSet und gibt als Ergebnis wieder ein DataSet zurück.
+Das Programm erhält bei der Ausführung ein DataSet als Eingabe und gibt als Ausgabe ein DataSet zurück.
 In das Eingabe-DataSet werden alle Variablen gespeichert, die für die Berechnungen benötigt werden.
 In dem Ausgabe-DataSet sind anschließend alle Variablen gespeichert, die berechnet wurden.\\
-Die Verwendung eines DataSet hat gegenüber dem Hereingeben mittels Parametern in die Main-Funktion folgende Vorteile:
+Die Verwendung eines DataSet hat gegenüber dem Übergeben mittels Parametern in die Main-Funktion folgende Vorteile:
 \begin{itemize}
 \item Es gibt nur einen Rückgabetyp (DataSet).
-Andernfalls müsste ein Konstrukt ersonnen werden, mehrere Variablen von der Main-Funktion zurückgeben zu lassen.
+Andernfalls müsste ein Konstrukt ersonnen werden, mehrere Objekte (z.B. Zeitreihen oder Konstanten) von der Main-Funktion zurückgeben zu lassen.
 \item Einfacher Aufruf der Main-Funktionen (ab 4 Parametern wird der Funktionsaufruf unübersichtlich\cite{parameterCount}). Statt 20 Parameter zu übergeben kann übersichtlich das DataSet zusammengebaut werden und als einziges Argument übergeben werden.
-\item Einfaches ``Weiterschleifen'' von DataSets zwischen mehreren PrePro-Programmen.
-Falls mehrere PrePro-Programme nacheinander ausgeführt werden kann bequem das Ausgabe-DataSet des ersten Programms als Eingabe-DataSet des zweiten Programms genommen werden.
+\item Einfaches ``Weiterreichen'' von DataSets zwischen mehreren PrePro-Programmen.
+Falls mehrere PrePro-Programme nacheinander ausgeführt werden, kann das Ausgabe-DataSet des ersten Programms als Eingabe-DataSet des zweiten Programms genommen werden.
 \end{itemize}
 
 \subsection{Optionale Imports}
@@ -125,9 +125,10 @@ Wenn die angegebene, zu importierende Variable nicht in dem DataSet existiert, w
 \textbf{Achtung}: Wenn ein Import optional ist und die Variable nicht in dem DataSet existierte, wurde die Variable nicht geladen.
 Wenn nun in dem Programm versucht wird auf die Variable zuzugreifen wird eine Fehlermeldung erzeugt, dass die Variable nicht definiert sei.
 Deshalb ist es wichtig, die Gültigkeit der Variablen mittels der \texttt{exists}-Funktion zu prüfen, die im nächsten Kapitel vorgestellt wird.
-Wenn bei dem konstruieren des Ausführungspfad nicht aufgepasst wird, kann auf eine nicht geladene Variable zugegriffen werden.
+Wenn bei der Konstruktion des Ausführungspfad nicht aufgepasst wird, kann auf eine nicht existierende Variable zugegriffen werden.
 Das ist vergleichbar mit Nullpointern, die in eine Funktion hereingegeben werden können und zunächst mal auf \texttt{!= null} geprüft werden müssen.\\
 Deshalb ist es definitiv nicht ratsam, alle Imports als optional zu kennzeichnen.
+Vielmehr sollten nur die wirklich optionalen Variablen als optional gekennzeichnet werden.
 
 \begin{lstlisting}[language=prepro, label={lst:OptionalImport}, caption={PrePro-Code mit optionalen Imports}, captionpos=b]
 function main() {
@@ -146,38 +147,41 @@ function foo() returns const {
 
 \subsection{Die exists-Funktion}
 Mittels der Funktion \texttt{exists(<VariablenName>)} kann abgefragt werden, ob diese Variable geladen wurde.
-Wurde die Variable geladen, gibt die Funktion eine 1 zurück, andernfalls eine 0.
+Wurde die Variable zur Verfügung gestellt, gibt die Funktion eine 1 zurück, andernfalls eine 0.
 Nach Abschluss der Berechnungen in \code{lst:OptionalImport} hat die Variable \texttt{isPresent} der Wert 1, die Variable \texttt{not Present} den Wert 0.
 Dies ist in folgendem Fall nützlich:
 In ein Programm werden zwei Koordinaten-Zeitreihen A und B gegeben.
-Im Idealfall wird auf dem Mittelpunkt zwischen diesen Punkten gearbeitet.
+Im Regelfall wird auf dem Mittelpunkt zwischen diesen Punkten gearbeitet.
 Ist jedoch die Variable A nicht definiert, soll für die Berechnung B verwendet werden, und anders herum.
 Eine kleine Abweichung wird hier in Kauf genommen.
 Dieser Fall mag ungewöhnlich wirken, warum sollte der Code nicht einfach an die Verwendung von A oder B angepasst werden?
 Dies gibt mehr Sinn, wenn ein Skript allgemein verwenden werden soll um häufig genutzte Berechnungen auszulagern.
-In diesem Fall möchte man nicht jedes Mal die Berechnung aufs neue anpassen, sondern die Funktion einmal allgemein schreiben und die Ausführung abhängig von den gegebenen Daten machen.\\
+In diesem Fall möchte man nicht jedes Mal die Berechnung aufs neue anpassen, sondern die Funktion einmal allgemein schreiben und die Ausführung abhängig von den gegebenen Daten machen.
 Das oben genannte Beispiel mit A und B könnte in etwa so ausgedrückt werden.
-Der gegebene Code in \code{lst:OptionalImportExample} ist nicht unbedingt mit dem PrePro-Interpreter ausführbar, soll aber das Prinzip verdeutlichen.
+Der Code in \code{lst:OptionalImportExample}, soll das Prinzip verdeutlichen.
 \begin{lstlisting}[language=prepro, label={lst:OptionalImportExample}, caption={PrePro-Code mit optionalen Imports}, captionpos=b]
 import optional vec3 a, optional vec3 b;
 
-vec3 center = (exist(a) && exist(b)) * ( a + b ) / 2
-|| a * exist(a)
-|| b * exist(b);
+vec3 center = (exists(a) && exists(b)) ** (a + b) / 2
+|| exists(a) ** a
+|| exists(b) ** b
+|| throw "Neither a or b exists";
+
+export center;
 \end{lstlisting}
 Falls die Variable a und b beide existieren ergibt der Ausdruck \texttt{(exist(a) \&\& exist(b))} eine 1, andernfalls eine 0.
-Allerdings beinhaltet das \code{lst:OptionalImportExample} ein großes Problem:
+Wichtig ist an dieser Stelle, dass die Multiplikationen lazy sind:
 Falls a existiert und b nicht, ergibt der Ausdruck \texttt{(exist(a) \&\& exist(b))} eine 0, der Interpreter rechnet dann weiter, also \texttt{* ( a + b ) / 2}.
-Das Ergebnis einer Multiplikation ist immer null, soweit würde alles passen, da durch das \texttt{||} die anderen Fälle probiert werden.
+Das Ergebnis einer Multiplikation ist immer null, soweit ist die Rechnung korrekt, da durch das \texttt{||} die anderen Fälle probiert werden.
 Das Problem ist:
 Der Interpreter versucht \texttt{* ( a + b ) / 2}. zu berechnen und erzeugt - vollkommen zurecht - eine Fehlermeldung, dass b nicht definiert ist.\\
-Zur Lösung dieses Problems gibt es 2 Möglichkeiten:
+Zur Lösung dieses Problems gab es 2 Möglichkeiten:
 \begin{enumerate}
 \item \textbf{Lazy Multiplikation}\\
 Es wird ein neuer Multiplikations-Operator eingeführt, der den rechten Teil nur berechnet, wenn der linke Teil != 0 ist.
 Dadurch würde nach dem Teil \texttt{(exist(a) \&\& exist(b))} die Berechnung abgebrochen, da der linke Teil 0 ergibt.
 Durch das Abbrechen wird nicht versucht Variablen zu verwenden, die nicht definiert sind.
-Für diesen neuen Multiplikations-Operator muss ein neues Symol definiert werden, z.B. ``**''.\\
+Für diesen neuen Multiplikations-Operator wurde ein neues Symbol definiert: ``**''.\\
 \textbf{Vorteile}:
 \begin{itemize}
 \item Einfache Implementierung.
@@ -203,7 +207,7 @@ if(exists(a) && exists(b)) {
 }
 <<OPTIONAL>>
 else {
-	throw "Neither a or b was defined";
+	throw "Neither a or b exists";
 }
 \end{lstlisting}
 \textbf{Vorteile}:
@@ -216,13 +220,12 @@ else {
 \item Erhöht die Anzahl der Codezeilen dramatisch.
 \item Höherer Aufwand bei der Implementierung
 \end{itemize}
-
 \end{enumerate}
+Aufgrund der einfacheren Implementierung und der kurzen, prägnanten Ausdrucksweise wurde die Variante der Lazy Multiplikation in PrePro umgesetzt.
 
 \section{Kommentare}
-Kommentare sollen in der \ac{DSL} möglich sein.\\
-Einen Zeilen-Kommentar wird ein ``//'' vorangestellt.\\
-Ein Block-Kommentar wird mir ``/*'' und ``*/'' umschlossen.
+In der \ac{DSL} wird einem Zeilen-Kommentar ein ``//'' vorangestellt.\\
+Ein Block-Kommentar wird mit ``/*'' und ``*/'' umschlossen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \endinput
