Added Ausblick with Truffle

--- a/abk.tex
+++ b/abk.tex
@@ -14,5 +14,6 @@
 \acro{JVM}{Java virtual machine}
 \acro{POM}{Project Object Model}
 \acro{PrePro}{Pre-Processing: PrePro ist die Bezechnung der DSL, die aus dieser Arbeit heraus entstanden ist}
+\acro{VM}{Virtual machine}
 
 \end{acronym}
