--- a/bericht.bib
+++ b/bericht.bib
@@ -54,3 +54,11 @@
 	url = {https://github.com/graalvm/simplelanguage},
 	urldate = {2019-05-16}
 }
+
+@online{TruffleHowTo,
+	author = {Cristian Esquivias},
+	title = {Writing a Language in Truffle. Part 2: Using Truffle and Graal},
+	year = 2014,
+	url = {http://cesquivias.github.io/blog/2014/12/02/writing-a-language-in-truffle-part-2-using-truffle-and-graal/},
+	urldate = {2019-05-19}
+}
