--- a/kapitel/kapitel2.tex
+++ b/kapitel/kapitel2.tex
@@ -11,7 +11,10 @@ Die gängigsten Frameworks sind in \tab{tab:Frameworks} gelistet.
 		\hline \rowcolor{gray!15}
 		\textbf{Framework} & \textbf{Sprache} \\ \hhline{|=|=|}
 		Tensorflow & Python \\ \hline
-		DL4J & Java \\ \hline
+		keras & Python \\ \hline
+		PyTorch & Python \\ \hline
+		Scikit-learn & Python \\ \hline
+		Deeplearning4j (DL4J) & Java \\ \hline
 	\end{tabular}
 	\caption{Die gängigsten Frameworks für maschinelles Lernen}
 	\label{tab:Frameworks}
